# google-flights-scraper

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  tests.yml
.github/: CODEOWNERS
.github/workflows/: make-docs-dev.yml  pre-commit-checks.yml  tests.yml
data/: airport_codes.csv  date_range_results.csv  destination_search_results.csv
docs/: README.md  gen_ref_pages.py
docs/tutorial/: batch_request.ipynb  simple_request.ipynb
examples/: all_flights.json  example_batch_usage.py  example_usage.py  flight_results.json
examples/output/: all_flights.json  date_range_results.csv  destination_search_results.csv  flight_results.csv  flight_results.json  weekend_getaways.csv
reference/SUMMARY/: index.html
reference/google_flights_scraper/: index.html
reference/google_flights_scraper/batch_scraper/: index.html
reference/google_flights_scraper/config_browser/: index.html
reference/google_flights_scraper/interactions/: index.html
reference/google_flights_scraper/jupyter_helper/: index.html
reference/google_flights_scraper/parsers/: index.html
reference/google_flights_scraper/scraper/: index.html
reference/google_flights_scraper/validators/: index.html
search/: search_index.json
src/google_flights_scraper/: __init__.py  batch_scraper.py  config_browser.py  interactions.py  jupyter_helper.py  parsers.py  scraper.py  validators.py
tests/: conftest.py  dummy_test.py  pytest.ini  test_000_inputs.py  test_001_initialization.py  test_002_departure.py  test_003_return.py  test_004_price.py
tests/integration/: conftest.py  test_001_initialization.py  test_002_departure.py  test_003_return.py  test_004_price.py
tests/unit/: test_batch_scraper.py  test_config_browser.py  test_interactions.py  test_jupyter_helper.py  test_parsers.py  test_scraper.py  test_validators.py
tutorial/batch_request/: index.html
tutorial/simple_request/: index.html
